# svm_self_driving

./: LICENSE  README.md
auto_nav/: CMakeLists.txt  package.xml
auto_nav/config/: experiment.yaml  params.yaml  sllidar.yaml
auto_nav/launch/: cam_test.py  nav_launch.py
auto_nav/models/: model.sdf
auto_nav/src/: experiment.cpp  navigation.cpp
f1tenth_stack/config/: joy_teleop.yaml  sensors.yaml  sllidar.yaml  vesc.yaml
f1tenth_stack/launch/: bringup_launch.py
