<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_nav</name>
  <version>1.0.0</version>
  <description> an f1tenth-compatible node for autonomous navigation </description>
  <maintainer email="teeluckn@mcmaster.ca"> Neelkant Teeluckdharry </maintainer>
  <license> MIT </license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend> rclcpp </depend>
  <depend> std_msgs </depend>
  <depend> sensor_msgs </depend>
  <depend> ackermann_msgs </depend>
  <depend> vesc_msgs </depend>
  <depend> nav_msgs </depend>
  <depend> joy </depend>
  <depend> geometry_msgs </depend>
  <depend> visualization_msgs </depend>
  <depend> ackermann_mux </depend>
  <depend> rmw </depend>
  <depend> rcutils </depend>

  <depend> cv_bridge </depend>
  <depend> image_transport </depend>


  <exec_depend> ros2launch </exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
